@@ -3,7 +3,8 @@ package application;
 public class Pusher {
 //pushhh
 	
-	
+// "--module-path \"C:\Users\A\Documents\Code\ParDi\Brainzz\javafx-sdk-22.0.1\lib" --add-modules javafx.controls,javafx.graphics,javafx.fxml"
+//
 	
 	// PUSHHHHHHHHHHHHHHHH  - 12:18 AM
 	// asojdbakjsdbaskjdl
